[Minor fixes] Fix on some with properties on the BlockInfo.scss to eliminate horizontal scrolling

--- a/src/styles/BlockInfo.scss
+++ b/src/styles/BlockInfo.scss
@@ -43,9 +43,10 @@
         display: flex;
         flex-direction: column;
         height: auto;
+        width: auto;
     }
     .BlockInfo .block-quote {
-        width: 100vw;
+        width: 99vw;
     }
     .BlockInfo .block-quote h3 {
         padding: 2rem 5rem 1rem 5rem;
@@ -57,9 +58,9 @@
         padding: 0 5rem 2rem 5rem;
     }
     .block-image-container figure {
-        width: 100vw;
+        width: 99vw;
     }
     .block-image-container img {
-        width: 100vw;
+        width: 99vw;
     }
 }
